--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,13 +1,8 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-  <path
-      android:pathData="M31,69.5L31,36.41C31,34.25 32.79,32.47 34.95,32.47L73.05,32.47C75.21,32.47 77,34.25 77,36.41L77,69.5L31,69.5Z"
-      android:fillColor="#FFFFFF"/>
-  <path
-      android:pathData="M31,69.5L31,43.46C31,41.3 32.79,39.52 34.95,39.52L73.05,39.52C75.21,39.52 77,41.3 77,43.46L77,69.5L31,69.5Z"
-      android:fillColor="#000000"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:width="80dp"
+        android:height="80dp"
+        android:drawable="@drawable/icon"
+        android:gravity="center" />
+</layer-list>
