--- a/app/src/main/res/drawable/splash_icon.xml
+++ b/app/src/main/res/drawable/splash_icon.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:width="108dp"
+        android:width="148dp"
         android:height="108dp"
-        android:drawable="@drawable/logo"
+        android:drawable="@drawable/logo_winter"
         android:gravity="center" />
 </layer-list>
